End crud Actividad

--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -11,6 +11,7 @@
       <app-update-group *ngSwitchCase="'editGroup'"></app-update-group>
       <app-update-activity *ngSwitchCase="'editActivity'"></app-update-activity>
       <app-delete-group *ngSwitchCase="'deleteGroup'"></app-delete-group>
+      <app-delete-activity *ngSwitchCase="'deleteActivity'"></app-delete-activity>
       <div *ngSwitchDefault class="text-red-500">Selecciona una opción válida</div>
     </div>
   </div>
