--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -12,6 +12,8 @@
       <app-update-activity *ngSwitchCase="'editActivity'"></app-update-activity>
       <app-delete-group *ngSwitchCase="'deleteGroup'"></app-delete-group>
       <app-delete-activity *ngSwitchCase="'deleteActivity'"></app-delete-activity>
+      <app-delete-docente *ngSwitchCase="'deleteDocente'"></app-delete-docente>
+      <app-update-docente *ngSwitchCase="'editDocente'"></app-update-docente>
       <div *ngSwitchDefault class="text-red-500">Selecciona una opción válida</div>
     </div>
   </div>
