--- a/src/app/director/forms-direc/add-docente-modal/add-docente-modal.component.html
+++ b/src/app/director/forms-direc/add-docente-modal/add-docente-modal.component.html
@@ -1,8 +1,9 @@
 <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
   <div class="bg-white p-8 rounded-lg w-96 relative">
-    <div *ngIf="isLoading" class="loader-overlay">
-      <div class="loader"></div>
+    <div *ngIf="loaderService.loading$ | async" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50">
+      <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-teal-600"></div>
     </div>
+    
     <div class="flex flex-col items-center mb-4">
       <img src="agregar-usuario (1)(1).png" alt="Icon" class="h-16 w-16 mb-2">
       <h2 class="text-2xl font-bold text-teal-600">Añadir Docente</h2>
@@ -27,8 +28,8 @@
       <input id="docenteContrasena" [(ngModel)]="docente.contrasena" name="contrasena" type="password" placeholder="Contraseña" class="w-full p-2 mt-1 mb-4 border border-gray-300 rounded-md" required>
       
       <div class="flex space-x-2">
-        <button type="submit" class="w-1/2 bg-[#004c4c] text-white py-2 rounded-md hover:bg-[#003636]" [disabled]="isLoading">Agregar</button>
-        <button type="button" (click)="closeModal()" class="w-1/2 bg-[#004c4c] text-white py-2 rounded-md hover:bg-[#003636]" [disabled]="isLoading">Cancelar</button>
+        <button type="submit" class="w-1/2 bg-[#004c4c] text-white py-2 rounded-md hover:bg-[#003636]"  [disabled]="loaderService.loading$ | async">Agregar</button>
+        <button type="button" (click)="closeModal()" class="w-1/2 bg-[#004c4c] text-white py-2 rounded-md hover:bg-[#003636]">Cancelar</button>
       </div>
     </form>
   </div>
