--- a/src/app/docente/forms/add-contenido/add-contenido.component.html
+++ b/src/app/docente/forms/add-contenido/add-contenido.component.html
@@ -1,5 +1,8 @@
 <div class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50">
   <div class="w-[500px] bg-white p-8 rounded-lg shadow-md">
+    <div *ngIf="loaderService.loading$ | async" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50">
+      <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-teal-600"></div>
+    </div>
     <div class="flex justify-center mb-6">
       <img src="/contenido.png" alt="Imagen ilustrativa" class="w-auto h-[80px] object-contain">
     </div>
@@ -24,7 +27,7 @@
       <button 
         (click)="onAddContenido()"
         type="button" 
-        class="bg-[#004C4C] text-white font-semibold py-2 w-40 rounded-lg hover:bg-[#003838] transition duration-300">
+        class="bg-[#004C4C] text-white font-semibold py-2 w-40 rounded-lg hover:bg-[#003838] transition duration-300" [disabled]="loaderService.loading$ | async">
         Aceptar
       </button>
     </div>    
