--- a/src/app/docente/forms/add-temario/add-temario.component.html
+++ b/src/app/docente/forms/add-temario/add-temario.component.html
@@ -1,5 +1,8 @@
 <div class="w-[400px] h-auto mx-auto bg-white p-8 rounded-lg shadow-lg">
-  
+   
+  <div *ngIf="loaderService.loading$ | async" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50">
+    <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-teal-600"></div>
+  </div>
   <div class="flex justify-center mb-4">
     <img src="/pdf-icon.png" alt="Subir Archivo" class="w-16 h-16 object-cover">
   </div>
@@ -16,7 +19,7 @@
       </div>
     
       <div class="flex justify-between gap-4">
-        <button type="submit" class="w-full bg-[#004C4C] text-white font-semibold py-3 px-4 rounded-lg hover:bg-[#003838] transition duration-300" [disabled]="!archivo">
+        <button type="submit" class="w-full bg-[#004C4C] text-white font-semibold py-3 px-4 rounded-lg hover:bg-[#003838] transition duration-300" [disabled]="!archivo" [disabled]="loaderService.loading$ | async">
           Subir PDF
         </button>
         <button type="button" class="w-full bg-[#FF5B5B] text-white font-semibold py-3 px-4 rounded-lg hover:bg-[#D74747] transition duration-300" (click)="closeModal()">
