--- a/src/app/docente/routing-docente/delete-activity.component.html
+++ b/src/app/docente/routing-docente/delete-activity.component.html
@@ -4,7 +4,7 @@
       <h2 class="text-2xl font-semibold text-red-600 mb-2">¿Estás seguro?</h2>
       <p class="text-gray-700 mb-6">No podrás revertir esta acción.</p>
       <div class="flex justify-center space-x-4">
-        <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" (click)="confirmDelete(docenteId)">
+        <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" (click)="confirmDelete()">
           Aceptar
         </button>
         <button class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400" (click)="closeModal()">
