ADD BOTON REGRESAR

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,14 @@
 <div class="flex items-center justify-center min-h-screen">
+  <button
+    class="absolute top-4 left-4 bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 flex items-center"
+    (click)="onGoBack()"
+  >
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5 mr-2">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+    </svg>
+    CONOCENOS
+  </button>
+
   <div class="p-10 w-full sm:w-1/3">
     <div class="flex items-center justify-center space-x-4 mb-8">
       <img src="./logo.png" alt="Brainacs Logo" class="w-1/4 h-auto" />
