--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,15 @@
 <div class="flex justify-center items-center min-h-screen bg-[#032328]">
+
+  <button
+    class="absolute top-4 left-4 bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 flex items-center"
+    (click)="onGoBack()"
+  >
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5 mr-2">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+    </svg>
+    Regresar
+  </button>
+
   <div class="w-full max-w-lg p-8 bg-[#004C4C] text-teal-300 rounded-lg shadow-lg">
     <h2 class="text-3xl font-bold text-center mb-6">Registro de Directores</h2>
     <form (ngSubmit)="onSubmit()" [formGroup]="registerForm" class="space-y-4">
