add inspect temario

--- a/src/app/docente/view-group/view-temario/view-temario.component.html
+++ b/src/app/docente/view-group/view-temario/view-temario.component.html
@@ -11,7 +11,7 @@
       *ngFor="let temario of temarios" 
       [cardData]="temario" 
       cardType="temario" 
-      (openModal)="openActivityModal(temario)"
+      (openModal)="openTemarioInspectModal(temario)"
       userType="docente">
     </app-temario>
   </div>
