--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -5,6 +5,8 @@
       <app-add-alumno *ngSwitchCase="'alumno'"></app-add-alumno>
       <app-add-tarea *ngSwitchCase="'tarea'"></app-add-tarea>
       <app-inspect-activity *ngSwitchCase="'inspect-activity'"></app-inspect-activity>
+      <app-inspect-temario *ngSwitchCase="'inspect-temario'"></app-inspect-temario>
+      <app-inspect-alumno *ngSwitchCase="'inspect-alumno'"></app-inspect-alumno>
       <app-add-temario *ngSwitchCase="'temario'"></app-add-temario>
       <app-add-contenido *ngSwitchCase="'contenido'"></app-add-contenido>
       <app-add-contenido-ia *ngSwitchCase="'contenidoIA'"></app-add-contenido-ia>
