--- a/src/app/docente/cards/inspect-temario/inspect-temario.component.html
+++ b/src/app/docente/cards/inspect-temario/inspect-temario.component.html
@@ -1,1 +1,24 @@
-<p>inspect-temario works!</p>
+<div class="w-[500px] h-auto mx-auto bg-white rounded-lg shadow-lg overflow-hidden border border-gray-200 relative">
+  
+    <button type="button" 
+      class="absolute top-2 right-4 text-2xl text-gray-500 hover:text-red-500 transition-colors duration-300" 
+      (click)="closeModal()">x</button>
+  
+    <div class="p-6">
+      <h1 class="text-[#004C4C] text-3xl font-bold mb-4 text-center">{{'Detalles del temario'}} {{selectedTemario.id_temario}}</h1>
+  
+      <div class="flex flex-col items-center">
+        <img src="/pdf-icon.png" alt="Temario" class="w-16 h-16 object-cover mb-4">
+  
+        <p class="text-[#000000] text-lg font-medium leading-relaxed mb-4">
+          Visualiza el temario completo a continuación.
+        </p>
+  
+        <button (click)="verTemario(selectedTemario.documento_pdf)" 
+          class="bg-[#004C4C] text-white font-medium py-3 px-6 rounded-lg hover:bg-[#003838] transition duration-300">
+          Ver Temario
+        </button>
+      </div>
+    </div>
+  </div>
+  
