--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -12,6 +12,7 @@
       <app-add-contenido-ia *ngSwitchCase="'contenidoIA'"></app-add-contenido-ia>
       <app-update-group *ngSwitchCase="'editGroup'"></app-update-group>
       <app-update-activity *ngSwitchCase="'editActivity'"></app-update-activity>
+      <app-update-temario *ngSwitchCase="'editTemario'"></app-update-temario>
       <app-delete-group *ngSwitchCase="'deleteGroup'"></app-delete-group>
       <app-delete-activity *ngSwitchCase="'deleteActivity'"></app-delete-activity>
       <div *ngSwitchDefault class="text-red-500">Selecciona una opción válida</div>
