--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -13,6 +13,7 @@
       <app-update-group *ngSwitchCase="'editGroup'"></app-update-group>
       <app-update-activity *ngSwitchCase="'editActivity'"></app-update-activity>
       <app-update-temario *ngSwitchCase="'editTemario'"></app-update-temario>
+      <app-delete-temario *ngSwitchCase="'deleteTemario'"></app-delete-temario>
       <app-delete-group *ngSwitchCase="'deleteGroup'"></app-delete-group>
       <app-delete-activity *ngSwitchCase="'deleteActivity'"></app-delete-activity>
       <div *ngSwitchDefault class="text-red-500">Selecciona una opción válida</div>
