--- a/src/app/docente/cards/inspect-alumno/inspect-alumno.component.html
+++ b/src/app/docente/cards/inspect-alumno/inspect-alumno.component.html
@@ -1,1 +1,33 @@
-<p>inspect-alumno works!</p>
+<div class="w-[500px] h-auto mx-auto bg-white rounded-lg shadow-lg overflow-auto border border-gray-200 relative">
+    <button type="button" class="absolute top-2 right-4 text-2xl text-gray-500 hover:text-red-500 transition-colors duration-300"
+    (click)="closeModal()">
+      x
+    </button>
+  
+    <div class="p-6">
+      <div class="flex items-center">
+        <img [src]="alumno?.imagen || '/user.png'" alt="Alumno" class="w-16 h-16 object-cover rounded-full mr-4">
+        <h2 class="text-[#004C4C] text-3xl font-bold leading-tight">
+          Información Básica
+        </h2>
+      </div>
+  
+      <div class="mt-4">
+        <p class="text-[#000000] text-lg mt-3 font-medium leading-relaxed">
+          <strong>Nombre:</strong> {{ alumno?.nombre || 'No disponible' }}
+        </p>
+        <p class="text-[#000000] text-lg mt-3 font-medium leading-relaxed">
+          <strong>Matricula:</strong> {{ alumno?.matricula || 'No disponible' }}
+        </p>
+        <p class="text-[#000000] text-lg mt-3 font-medium leading-relaxed">
+          <strong>Correo:</strong> {{ alumno?.correo_electronico || 'No disponible' }}
+        </p>
+        <p class="text-[#000000] text-lg mt-3 font-medium leading-relaxed">
+          <strong>Grado:</strong> {{ alumno?.grado || 'No disponible' }} - <strong>Grupo:</strong> {{ alumno?.grupo || 'No disponible' }}
+        </p>
+        <p class="text-[#000000] text-lg mt-3 font-medium leading-relaxed">
+          <strong>Calificación Total:</strong> {{ alumno?.calif_total || 'No disponible' }}
+        </p>
+      </div>
+    </div>
+</div>
