--- a/src/app/docente/home-docente/home-docente.component.html
+++ b/src/app/docente/home-docente/home-docente.component.html
@@ -11,6 +11,9 @@
       ></app-card-group>
     </div>
   </div>
+  <div class="fixed bottom-4 right-4 z-50">
+    <app-view-ia></app-view-ia>
+  </div>
 </div>
 
 <app-generic-modal></app-generic-modal>
