--- a/src/app/docente/view-group/view-activity/view-activity.component.html
+++ b/src/app/docente/view-group/view-activity/view-activity.component.html
@@ -16,6 +16,10 @@
       </app-activity> 
   </div>
 
+  <div class="fixed bottom-4 right-4 z-50">
+    <app-view-ia></app-view-ia>
+  </div>
+
   <app-generic-modal></app-generic-modal>
 
 </div>
