--- a/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
+++ b/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
@@ -19,4 +19,8 @@
     <app-generic-modal></app-generic-modal>
 
   </div>  
+
+  <div class="fixed bottom-4 right-4 z-50">
+    <app-view-ia></app-view-ia>
+  </div>
 </div>
