--- a/src/app/docente/view-group/view-temario/view-temario.component.html
+++ b/src/app/docente/view-group/view-temario/view-temario.component.html
@@ -16,5 +16,9 @@
     </app-temario>
   </div>
 
+  <div class="fixed bottom-4 right-4 z-50">
+    <app-view-ia></app-view-ia>
+  </div>
+
   <app-generic-modal></app-generic-modal>
 </div>
