--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -13,9 +13,11 @@
       <app-update-group *ngSwitchCase="'editGroup'"></app-update-group>
       <app-update-activity *ngSwitchCase="'editActivity'"></app-update-activity>
       <app-update-temario *ngSwitchCase="'editTemario'"></app-update-temario>
+      <app-update-alumno *ngSwitchCase="'editAlumno'"></app-update-alumno>
       <app-delete-temario *ngSwitchCase="'deleteTemario'"></app-delete-temario>
       <app-delete-group *ngSwitchCase="'deleteGroup'"></app-delete-group>
       <app-delete-activity *ngSwitchCase="'deleteActivity'"></app-delete-activity>
+      <app-delete-alumno *ngSwitchCase="'deleteAlumno'"></app-delete-alumno>
       <app-delete-docente *ngSwitchCase="'deleteDocente'"></app-delete-docente>
       <app-update-docente *ngSwitchCase="'editDocente'"></app-update-docente>
       <div *ngSwitchDefault class="text-red-500">Selecciona una opción válida</div>
