--- a/src/app/shared/cards/alumno/alumno.component.html
+++ b/src/app/shared/cards/alumno/alumno.component.html
@@ -8,7 +8,7 @@
       <p class="text-base font-semibold text-[#004C4C] flex-grow">{{ cardData?.nombre }}</p>
       <div class="relative">
         <button 
-          (click)="toggleModal()" 
+          (click)="toggleModal($event)" 
           class="flex items-center justify-center pr-4"
         >
           <img src="menu_1.png" alt="Menú de opciones" class="w-auto h-8">
