--- a/src/app/docente/forms/add-alumno/add-alumno.component.html
+++ b/src/app/docente/forms/add-alumno/add-alumno.component.html
@@ -3,6 +3,9 @@
   <button type="button" class="absolute top-2 right-2 text-gray-700 font-semibold text-xl hover:text-red-700" (click)="closeModal()">
     ×
   </button>
+  <div *ngIf="loaderService.loading$ | async" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50">
+    <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-teal-600"></div>
+  </div>
 
   <div class="flex justify-center mb-4">
     <img src="/agregar-usuario (1)(1).png" alt="Añadir Alumno" class="w-16 h-16 object-cover">
@@ -107,9 +110,9 @@
 
         <div class="flex justify-between mt-4">
           <button type="button" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838] mr-2"
-            (click)="prevStep()">Anterior</button>
+            (click)="prevStep()" [disabled]="loaderService.loading$ | async">Anterior</button>
 
-          <button type="submit" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838]">
+          <button type="submit" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838]" [disabled]="loaderService.loading$ | async">
             Aceptar
           </button>
         </div>
