--- a/src/app/docente/forms/update-alumno/update-alumno.component.html
+++ b/src/app/docente/forms/update-alumno/update-alumno.component.html
@@ -1,4 +1,7 @@
 <div class="w-[400px] h-auto mx-auto bg-white p-6 rounded-lg shadow-md relative">
+  <div *ngIf="loaderService.loading$ | async" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50">
+    <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-teal-600"></div>
+  </div>
     <button type="button" class="absolute top-2 right-5 text-gray-700 font-semibold text-xl hover:text-red-700" (click)="closeModal()">
       ×
     </button>
@@ -87,7 +90,7 @@
           <div class="flex justify-between mt-4">
             <button type="button" class="w-1/2 bg-gray-400 text-white font-semibold py-2 px-3 rounded-lg hover:bg-gray-600 mr-2"
               (click)="prevStep()">Anterior</button>
-            <button type="submit" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838]">
+            <button type="submit" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838]" [disabled]="loaderService.loading$ | async">
               Guardar
             </button>
           </div>
