--- a/src/app/shared/layout/profile-modal/profile-modal.component.html
+++ b/src/app/shared/layout/profile-modal/profile-modal.component.html
@@ -1,4 +1,7 @@
-<div class="modal-container fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center z-50 p-4" *ngIf="isModalOpen('profile')">
+<div
+  class="modal-container fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center z-50 p-4"
+  *ngIf="isModalOpen('profile')"
+>
   <div class="modal-content bg-white rounded-lg shadow-lg max-w-lg w-full p-6">
     <h2 class="text-2xl font-semibold text-gray-800 mb-6">Información del Usuario</h2>
 
@@ -8,17 +11,51 @@
     </div>
 
     <div *ngIf="!isLoading && userData">
-      <p class="text-lg text-gray-700 mb-2"><strong>Nombre:</strong> {{ userData.nombre }} {{ userData.apellido_p }} {{ userData.apellido_m }}</p>
+      <p class="text-lg text-gray-700 mb-2">
+        <strong>Nombre:</strong> {{ userData.nombre }} {{ userData.apellido_p }} {{ userData.apellido_m }}
+      </p>
+
+      <div class="space-y-4">
+        <div *ngIf="imagen; else uploadImageSection" class="flex flex-col items-center relative">
+          <img
+            [src]="imagen"
+            alt="Foto del usuario"
+            class="w-32 h-32 rounded-full mx-auto mb-4 shadow-md"
+          />
+
+          <i
+            class="fa fa-trash absolute bottom-0 right-0 bg-white rounded-full p-1 shadow-md cursor-pointer hover:bg-red-600 hover:text-white transition-all"
+            (click)="onDeleteImage()"
+            aria-hidden="true"
+          ></i>
+        </div>
+        
+
+
+        <ng-template #uploadImageSection>
+          <label
+            class="block text-gray-700 font-semibold mt-2"
+            for="file-upload"
+          >
+            Subir imagen:
+          </label>
+          <input
+            id="file-upload"
+            type="file"
+            accept="image/*"
+            class="mt-1 block w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-gray-100 file:text-gray-700 hover:file:bg-gray-200"
+            (change)="onImageUpload($event)"
+          />
+        </ng-template>
+      </div>
 
       <div *ngIf="role === 'docente'" class="space-y-4">
-        <img *ngIf="imagen" [src]="imagen" alt="Foto del docente" class="w-32 h-32 rounded-full mx-auto mb-4 shadow-md">
         <p class="text-lg text-gray-700"><strong>ID Docente:</strong> {{ userData.id_docente }}</p>
         <p class="text-lg text-gray-700"><strong>Correo Electrónico:</strong> {{ userData.correo_electronico }}</p>
         <p class="text-lg text-gray-700"><strong>Usuario:</strong> {{ userData.usuario }}</p>
       </div>
 
       <div *ngIf="role === 'alumno'" class="space-y-4">
-        <img *ngIf="imagen" [src]="imagen" alt="Foto del alumno" class="w-32 h-32 rounded-full mx-auto mb-4 shadow-md">
         <p class="text-lg text-gray-700"><strong>Matrícula:</strong> {{ userData.matricula }}</p>
         <p class="text-lg text-gray-700"><strong>Correo Electrónico:</strong> {{ userData.correo_electronico }}</p>
         <p class="text-lg text-gray-700"><strong>Grado:</strong> {{ userData.grado }}</p>
@@ -27,18 +64,9 @@
       </div>
 
       <div *ngIf="role === 'director'" class="space-y-4">
-        <img *ngIf="imagen" [src]="imagen" alt="Foto del director" class="w-32 h-32 rounded-full mx-auto mb-4 shadow-md">
-      <p class="text-lg text-gray-700"><strong>Usuario:</strong> {{userData.usuario}}</p>
-      <p class="text-lg mb-4"><strong>Nombre:</strong> {{userData.nombre}}</p>
-      <p class="text-lg mb-4"><strong>Apellido Paterno:</strong> {{userData.apellido_p}}</p>
-      <p class="text-lg mb-4"><strong>Apellido Materno:</strong> {{userData.apellido_m}}</p>
-      <p class="text-lg mb-4"><strong>Correo:</strong> {{userData.correo_electronico}}</p>
+        <p class="text-lg text-gray-700"><strong>Usuario:</strong> {{ userData.usuario }}</p>
+        <p class="text-lg text-gray-700"><strong>Correo Electrónico:</strong> {{ userData.correo_electronico }}</p>
       </div>
-      
-    </div>
-
-    <div *ngIf="!isLoading && !userData">
-      <p class="text-red-500 text-lg">No se pudo cargar la información del usuario.</p>
     </div>
 
     <div class="flex space-x-4 mt-6">
