--- a/src/app/director/forms-direc/update-docente/update-docente.component.html
+++ b/src/app/director/forms-direc/update-docente/update-docente.component.html
@@ -1,6 +1,8 @@
 <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
   <div class="bg-white p-8 rounded-lg w-96 relative">
-
+    <button type="button" class="absolute top-2 right-2 text-gray-700 font-semibold text-xl hover:text-red-700" (click)="closeModal()">
+      ×
+    </button>
     <div class="flex flex-col items-center mb-4">
       <img src="agregar-usuario (1)(1).png" alt="Icon" class="h-16 w-16 mb-2">
       <h2 class="text-2xl font-bold text-teal-600"> Editar Docente</h2>
