--- a/src/app/docente/forms/add-temario/add-temario.component.html
+++ b/src/app/docente/forms/add-temario/add-temario.component.html
@@ -13,7 +13,7 @@
     <form (ngSubmit)="onUploadTemario()">
       <div class="mb-6">
         <label for="archivo" class="block text-gray-700 font-medium mb-2">Subir archivo</label>
-        <input type="file" id="archivo" name="archivo" class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" (change)="onFileSelected($event)" placeholder="Subir archivos" required>
+        <input id="archivo" name="archivo" class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]"type="file" (change)="onFileSelected($event)" placeholder="Subir archivos" required>
       </div>
     
       <div class="flex justify-between gap-4">
