--- a/src/app/docente/forms/add-alumno/add-alumno.component.html
+++ b/src/app/docente/forms/add-alumno/add-alumno.component.html
@@ -110,7 +110,7 @@
           <button type="button" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838] mr-2"
             (click)="prevStep()" [disabled]="loaderService.loading$ | async">Anterior</button>
 
-          <button type="submit" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838]" [disabled]="loaderService.loading$ | async">
+          <button type="submit" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838]">
             Aceptar
           </button>
         </div>
