--- a/src/app/docente/forms/update-alumno/update-alumno.component.html
+++ b/src/app/docente/forms/update-alumno/update-alumno.component.html
@@ -88,7 +88,7 @@
           <div class="flex justify-between mt-4">
             <button type="button" class="w-1/2 bg-gray-400 text-white font-semibold py-2 px-3 rounded-lg hover:bg-gray-600 mr-2"
               (click)="prevStep()">Anterior</button>
-            <button type="submit" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838]" [disabled]="loaderService.loading$ | async">
+            <button type="submit" class="w-1/2 bg-[#004C4C] text-white font-semibold py-2 px-3 rounded-lg hover:bg-[#003838]">
               Guardar
             </button>
           </div>
