SOLUCION BUG CERRAR MODAL

--- a/src/app/docente/forms/add-group/add-group.component.html
+++ b/src/app/docente/forms/add-group/add-group.component.html
@@ -1,6 +1,5 @@
 <div class="w-[600px] h-[auto] mx-auto bg-white p-8 rounded-lg shadow-md">
   
-  
   <h2 class="text-2xl font-semibold text-[#004C4C] mb-6 text-left">
     Agregar nuevo grupo
   </h2>
@@ -22,7 +21,7 @@
 
     <div class="flex justify-between">
       <button type="submit" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838] mr-2">Aceptar</button>
-      <button type="button" (click)="closeModal()" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838]" [disabled]="loaderService.loading$ | async">Cancelar</button>
+      <button type="button" (click)="closeModal()" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838]">Cancelar</button>
     </div>
   </form>
 </div>
